<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_sos"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/nav_sos"/>
    <item
        android:id="@+id/nav_health"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_health"/>
    <item
        android:id="@+id/nav_badges"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_badges"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings"/>
</menu>